--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-toastify": "^9.1.1"
   },
   "devDependencies": {
+    "@types/node": "^18.14.2",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
